--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -11,10 +11,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.2 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.10.2"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "1b845d706709e697148657bd13d79185f5da484333bdfde2cc9f530affaf308a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
